# dynamic-motd-cpp

./: .anjuta_sym_db.db  AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  config.h  config.status  configure  configure.ac  dynmotd.cpp  libtool
.anjuta/session/: anjuta.session  dock-layout.xml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
doc/: AUTHORS.md  Makefile.am  README.md  README.md~
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  dynamic_motd_cpp  dynmotd_cpp  main  main.cc  main.cc~
src/.deps/: main.Po
